compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_function_from_reference.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\npub fn something() {\n  something()\n}\n\nfn something_else() {\n  something()\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

import app

fn wibble() {
  app.something()
}


-- app.gleam

pub fn something() {
  something()
  ↑          
}

fn something_else() {
  something()
}


----- AFTER RENAME
-- mod.gleam

import app

fn wibble() {
  app.some_function()
}


-- app.gleam

pub fn some_function() {
  some_function()
}

fn something_else() {
  some_function()
}
