compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_local_variable_argument.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\npub fn add(first_number: Int, x: Int) -> Int {\n  x + first_number\n}\n"
---
----- BEFORE RENAME

pub fn add(first_number: Int, x: Int) -> Int {
  x + first_number
  ↑               
}


----- AFTER RENAME

pub fn add(first_number: Int, second_number: Int) -> Int {
  second_number + first_number
}
