compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_local_variable_assignment_pattern.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\npub fn main() {\n  let assert Error(12 as something) = Error(12)\n  something\n}\n"
---
----- BEFORE RENAME
-- app.gleam

pub fn main() {
  let assert Error(12 as something) = Error(12)
  something
  ↑        
}


----- AFTER RENAME
-- app.gleam

pub fn main() {
  let assert Error(12 as the_error) = Error(12)
  the_error
}
