compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_local_variable_from_definition_nested_pattern.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\npub fn main() {\n  let assert Ok([_, wibble, ..]) = Error(12)\n  wibble\n}\n"
---
----- BEFORE RENAME

pub fn main() {
  let assert Ok([_, wibble, ..]) = Error(12)
                    ↑                       
  wibble
}


----- AFTER RENAME

pub fn main() {
  let assert Ok([_, second_element, ..]) = Error(12)
  second_element
}
